# webshot.site-sdk

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md
examples/: README.md  basic-capture.js  basic-capture.php  basic-capture.py
js/: .gitignore  .npmignore  README.md  package.json  tsconfig.json
js/examples/: batch.mjs  browser.html  node-basic.mjs
js/src/: client.ts  errors.ts  index.ts  types.ts
php/: README.md  composer.json
php/examples/: basic.php  batch.php
php/src/: CaptureResult.php  Client.php  ThrottleStatus.php
php/src/Exception/: ApiException.php  ThrottledException.php  WebshotException.php
php/tests/: ClientTest.php
python/: README.md  pyproject.toml
python/examples/: async_basic.py  basic.py  batch.py
python/src/webshot/: __init__.py  client.py  errors.py
python/tests/: test_client.py
